--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.3.3"
 scikit-learn = "^1.8.0"
+pydantic = "^2.12.5"
+pydantic-settings = "^2.12.0"
+requests = "^2.32.5"
+ipykernel = "^7.1.0"
 
 
 [build-system]
